src/index.css
/* ... */
.trusted-pf h2 {
  font-size: 1.25rem;
  line-height: 1.25;
}
.trusted-pf p {
  padding-left: 1rem;
}
.platform-content {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 405px;
  flex-direction: column;
}
.t-platform-image {
  width: 100%;
}
.platform-grid {
}
.platform-grid a {
  color: #343434;
  display: flex;
  align-items: center;
  padding: 1.5rem 1.5rem;
}
.platform-grid h3 {
  line-height: 1;
}
.grid-img {
  width: 2rem;
  height: 2rem;
  margin-right: 1rem;
}
.pf-img-txt .pf-it-content {
  margin-top: 1rem;
}
.pf-img-txt {
  margin-bottom: 2rem;
}
.pf-about {
  padding: 2rem 0;
}
.pf-card-right {
  display: flex;
  flex-direction: column;
}
.pf-card-right p {
  margin: 0;
}
.box-card .outer {
  text-align: left;
  margin-top: 2rem;
}
.align-c {
  text-align: center;
}
.fg-1 {
  flex-grow: 1;
}
.box-card .outer img {
  max-width: 200px;
}
.bgt-blue {
  background: var(--primary-color);
  color: #fff;
}
.bgt-white {
  background: #fff;
  color: #000;
}
.bgt-white h3 {
  color: #000;
}
.bgt-primary {
  background: var(--primary-color);
  color: #fff;
}

footer {
  box-shadow: 0 1px 10px 1px rgba(161, 161, 161, 0.7);
  /* padding: 5rem 0 0; */
  padding: 3rem 0 0;
  margin: 0;
}

.footer-menu-title {
  border-bottom: 1px dashed #adadad;

  margin-bottom: 1.25rem;
}
.footer-menu-title h2 {
  font-size: 1.25rem;
  line-height: 1;
}
.footer-menu-title p {
  font-size: 0.75rem;
  margin-top: 1.5rem;
  line-height: 1;
  text-transform: uppercase;
}
.footer-menu ul {
  list-style: none;
  padding: 0;
}
.footer-menu a {
  color: #000;
  font-size: 0.875rem;
}
.screen-reader {
  display: none;
}
.footer-social li {
  padding: 0 0.5rem;
}
.footer-social svg {
  fill: #adadad;
  width: 2rem;
  height: 2rem;
}
.footer-social ul {
  flex-wrap: wrap;
}
.footer-logo {
  width: 200px;
}
.footer-comapny-select {
  display: flex;
  flex-direction: column;
  border-top: 1px solid #d7d7d7;
  border-bottom: 1px solid #d7d7d7;
  padding: 0.625rem;
  margin: 2rem 0;
  justify-content: space-between;
  align-items: flex-start;
}
.footer-comapny-select a {
  color: #000;
}
.entity-select {
  width: 100%;
}
.entity-select select {
  display: block;
  margin: 1rem 0;
  padding: 1rem 1rem;
  width: 100%;
}

.footer-bottom p {
  font-size: 0.75rem;
  margin-bottom: 1rem;
  line-height: 1.5;
}
.swiper-pagination-bullet {
  background-color: white !important;
}

.swiper-pagination-bullet-active {
  background-color: white !important;
}
.swiper-button-next,
.swiper-button-prev {
  color: white !important;
}

.swiper-button-next:hover,
.swiper-button-prev:hover {
  color: white !important;
}

.section-title {
  text-align: center;
  margin-bottom: 1.5rem;
  font-size: 2rem;
  color: #333;
}

/* .page-title-area,
.title-area-center {
  margin-top: 5rem;
  padding: 4rem 1rem 2rem;
} */
.header-2-wrap .title-area-center {
  padding: 8rem 0;
}
.page-title-area .pta-width {
  width: 100%;
}
.title-area-center .pta-width {
  text-align: center;
}
.page-title-area h1 {
  font-size: 2rem;
  font-weight: normal;
  color: #181e29;
}
.page-title-area p {
  font-size: 1.25rem;
  color: #181e29;
}

.img-rb {
  border-radius: 1rem;
  height: 100%;
}
.about-intro .about-text {
  padding-left: 1rem;
}

.about-notes {
  margin-top: 5rem;
}
/* .about-notes .abt-margin-1 {
  margin: 6rem auto;
  border-top: 1px solid #ccc;
} */
.about-notes .abt-margin-2 {
  margin: 0 auto;
  border-top: 1px solid #ccc;
  border-bottom: 1px solid #ccc;
  background: #fff;
}

.about-notes .card {
  padding: 2rem 1rem;
  background: transparent;
  border: none;
}
.about-notes .about-br {
  border-right: 1px solid #ccc;
}

.why-choose-us .adv-1-box {
  align-items: flex-start;
}
.wcu-title {
  text-align: center;
}
.wc-fmarket {
  padding: 4rem 0;
}
.wc-fmarket.wc-fm-2 {
  padding: 0 0 4rem;
}
.wc-fmarket h2 {
  font-size: 2rem;
  margin-bottom: 2rem;
}
.wc-fmarket h3 {
  font-size: 1.25rem;
}
.wc-fmarket .wcfm-col {
  background: #f2f6ff;
  padding: 1rem;
  margin: 1rem;
  border-top: 4px solid var(--primary-color);
}
.ib-cta {
  padding: 4rem 1rem;
}
.ib-cta .container {
  background: rgba(19, 104, 166, 0.2); /* 1368A6 with 20% opacity */
  padding: 4rem 0;
  border-radius: 1.635rem;
}
.ib-cta h2 {
  font-size: 2rem;
  color: #fff;
}
.ib-cta p {
  color: #b2b2b2;
}
.ib-terms {
  margin: 2rem 0;
}
.ib-terms h2 {
  margin-bottom: 2rem;
  font-size: 2rem;
}
.ib-terms li {
  margin-bottom: 1rem;
  font-size: 1rem;
}
.ib-mktp {
  margin: 2rem 0 4rem;
}
.ib-mktp h4 {
  font-size: 1rem;
  font-weight: bold;
  color: #000;
}
.ib-mktp .card-st-2 {
  background: #fff;
  padding: 1rem;
  height: 100%;
  border-left: 4px solid var(--primary-color);
}
.ib-mktp .mkt-feat .col-md-6 {
  margin-bottom: 2rem;
}
.af-title {
  align-items: center;
  padding: 3rem 0;
}
.af-title h2 {
  font-size: 1.5rem;
  line-height: 1.5;
}
.af-title p {
  margin: 0;
}
.af-border {
  border-left: 3px solid #ccc;
  padding: 1rem 0 1rem 2rem;
  display: flex;
  align-items: center;
}
.af-left-title {
  align-items: center;
  display: flex;
  justify-content: center;
}
.inf-cta {
  background: var(--primary-color);
  color: #fff;
  padding: 6rem 0;
  text-align: center;
}
.inf-cta h2 {
  font-size: 2rem;
  color: #fff;
}
.inf-cta h3 {
  color: #fff;
  padding: 1rem;
}
.inf-cta-title {
  padding: 2rem 0;
}
.inf-icon {
  width: 5rem;
}
.inf-cta-btn {
  text-align: center;
}
.reg-steps {
  padding: 5rem 0;
}
.inf-account {
  background: #fff;
  color: var(--primary-color);
  max-width: 100%;
}
.title-bg-cta {
  padding: 4rem 0;
  background: rgb(170, 187, 194);
  background: linear-gradient(
    52deg,
    rgba(219, 245, 255, 1) 0%,
    rgba(211, 219, 221, 1) 100%
  );
}
.title-bg-cta p {
  font-size: 1rem;
}
.title-bg-cta .cta-img-1 {
  margin-top: 4rem;
}
.title-bg-cta .btn-primary {
  margin-top: 3rem;
  max-width: initial;
}
.pf-about {
  margin-top: 2rem;
}
.pf-about p {
  font-size: 1.25rem;
}
/* ... */

